--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         <section class="features section">
             <div class="container features-container">
-                <h2 hidden class="section-title">Features</h2>
+                <h2 class="section-title visually-hidden">Features</h2>
                 <ul class="list features-list">
                     <li class="features-list-item">
                         <h3 class="title">Strategy</h3>
@@ -104,25 +104,33 @@
                     <li class="our-team-item">
                         <img class="our-team-img" src="./images/team-1.jpg" alt="Mark Guerrero" width="264"
                             height="260">
-                        <h3 class="our-team-item-title title">Mark Guerrero</h3>
-                        <p class="our-team-item-description description">Product Designer</p>
+                        <div class="our-team-item-wrapper">
+                            <h3 class="our-team-item-title title">Mark Guerrero</h3>
+                            <p class="our-team-item-description description">Product Designer</p>
+                        </div>
                     </li>
                     <li class="our-team-item">
                         <img class="our-team-img" src="./images/team-2.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="our-team-item-title title">Tom Ford</h3>
-                        <p class="our-team-item-description description">Frontend Developer</p>
+                        <div class="our-team-item-wrapper">
+                            <h3 class="our-team-item-title title">Tom Ford</h3>
+                            <p class="our-team-item-description description">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="our-team-item">
                         <img class="our-team-img" src="./images/team-3.jpg" alt="Camila Garcia" width="264"
                             height="260">
-                        <h3 class="our-team-item-title title">Camila Garcia</h3>
-                        <p class="our-team-item-description description">Marketing</p>
+                        <div class="our-team-item-wrapper">
+                            <h3 class="our-team-item-title title">Camila Garcia</h3>
+                            <p class="our-team-item-description description">Marketing</p>
+                        </div>
                     </li>
                     <li class="our-team-item">
                         <img class="our-team-img" src="./images/team-4.jpg" alt="Daniel Wilson" width="264"
                             height="260">
-                        <h3 class="our-team-item-title title">Daniel Wilson</h3>
-                        <p class="our-team-item-description description">UI Designer</p>
+                        <div class="our-team-item-wrapper">
+                            <h3 class="our-team-item-title title">Daniel Wilson</h3>
+                            <p class="our-team-item-description description">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
