--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <main>
         <section class="portfolio">
             <div class="container portfolio-container">
-                <h1 hidden>portfolio</h1>
+                <h1 class="visually-hidden">portfolio</h1>
                 <ul class="list filter-list">
                     <li class="filter-item">
                         <button class="filter-button" type="button">All</button>
@@ -71,15 +71,21 @@
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/banking-app.jpg" alt="App Interface" width="360" height="300">
-                            <h2 class="title">Banking App Interface Concept</h2>
-                            <p class="description portfolio-item-description">App</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Banking App Interface Concept</h2>
+                                <p class="description portfolio-item-description">App</p>
+                            </div>
+
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/cashless-payment.jpg" alt="Marketing" width="360" height="300">
-                            <h2 class="title">Cashless Payment</h2>
-                            <p class="description">Marketing</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Cashless Payment</h2>
+                                <p class="description">Marketing</p>
+                            </div>
+
                         </a>
 
                     </li>
@@ -87,15 +93,21 @@
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/meditation-app.jpg" alt="notebook smartphone" width="360"
                                 height="300">
-                            <h2 class="title">Meditation App</h2>
-                            <p class="description">App</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Meditation App</h2>
+                                <p class="description">App</p>
+                            </div>
+
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360" height="300">
-                            <h2 class="title">Taxi Service</h2>
-                            <p class="description">Marketing</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Taxi Service</h2>
+                                <p class="description">Marketing</p>
+                            </div>
+
                         </a>
 
                     </li>
@@ -103,39 +115,54 @@
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/screen-illustrations.jpg" alt="Screens" width="360"
                                 height="300">
-                            <h2 class="title">Screen Illustrations</h2>
-                            <p class="description">Design</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Screen Illustrations</h2>
+                                <p class="description">Design</p>
+                            </div>
+
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/online-courses.jpg" alt="Happy girl wit smartphone" width="360"
                                 height="300">
-                            <h2 class="title">Online Courses</h2>
-                            <p class="description">Marketing</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Online Courses</h2>
+                                <p class="description">Marketing</p>
+                            </div>
+
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/inst-stories-concept.jpg" alt="Instagram Stories" width="360"
                                 height="300">
-                            <h2 class="title">Instagram Stories Concept</h2>
-                            <p class="description">Design</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Instagram Stories Concept</h2>
+                                <p class="description">Design</p>
+                            </div>
+
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/organic-food.jpg" alt="Organic Food in baskat" width="360"
                                 height="300">
-                            <h2 class="title">Organic Food</h2>
-                            <p class="description">Web Site</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Organic Food</h2>
+                                <p class="description">Web Site</p>
+                            </div>
+
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a class="link portfolio-link" href=""><img class="portfolio-img"
                                 src="./images/portfolio/fresh-coffee.jpg" alt="Fresh Coffee" width="360" height="300">
-                            <h2 class="title">Fresh Coffee</h2>
-                            <p class="description">Web Site</p>
+                            <div class="portfolio-item-wrapper">
+                                <h2 class="title">Fresh Coffee</h2>
+                                <p class="description">Web Site</p>
+                            </div>
+
                         </a>
                     </li>
                 </ul>
